# OpenGLHomework

./: .gitignore  CMakeLists.txt  readme.md
assets/: resources.json  scene1.json  scene2.json  scene3.json
assets/materials/crafting_table/: crafting_table.gltf
assets/materials/gold/: pbr_metal_bare_metal_gold_smooth_1660_0_XS_albedo.tif  pbr_metal_bare_metal_gold_smooth_1660_0_XS_metallic.tif
assets/materials/stone/: pbr_round_1420_4_S_ambient_occlusion.tif  pbr_round_1420_4_S_roughness.tif  stone.gltf
assets/materials/wood_floor_deck/: wood_floor_deck_1k.gltf
assets/shaders/pbr/: ps.frag  vs.vert
assets/shaders/pick/: ps.frag  vs.vert
workspace/: CMakeLists.txt
workspace/homework1-余天一2020270901005/: CMakeLists.txt  文档.md
workspace/homework1-余天一2020270901005/src/: Assests.h  CGmath.h  Command.h  Display.h  GlobalRuntime.h  GuidAlloctor.h  ISystem.h  InputHandler.h  MoveSystem.h  PainterSystem.h  World.h  YGraphics.h  assets.h  clock.h  glcontext.h  main.cpp  models.h  render.h  render_aspect.h  winapi.h
workspace/homework1-余天一2020270901005/src/engine/: GlobalRuntime.cpp  GlobalRuntime.h
workspace/homework1-余天一2020270901005/src/engine/assets/: Assets.cpp  Assets.h
workspace/homework1-余天一2020270901005/src/engine/input/: InputHandler.h
workspace/homework1-余天一2020270901005/src/engine/render/: Render.cpp  Render.h  RenderAspect.h
workspace/homework1-余天一2020270901005/src/engine/utils/: Clock.h  GLContext.cpp  GLContext.h  winapi.h
workspace/homework1-余天一2020270901005/src/engine/window/: Display.cpp  Display.h  MenuManager.cpp  MenuManager.h
workspace/homework1-余天一2020270901005/src/engine/world/: GObject.cpp  GObject.h  Transform.h  World.cpp  World.h
workspace/homework2-余天一2020270901005/: CMakeLists.txt  文档.md
workspace/homework3-余天一2020270901005/: CMakeLists.txt
workspace/homework4-余天一2020270901005/: CMakeLists.txt
workspace/lab/: CMakeLists.txt
workspace/实验1/: CMakeLists.txt  实验指导_2023_0912.pptx
workspace/实验2/: CMakeLists.txt
workspace/实验3/: CMakeLists.txt
workspace/实验4/: CMakeLists.txt
(+106 files in other folders)
